background color behind video and responsive fixes

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -173,6 +173,7 @@ a {
     width: 100%;
     position: relative;
     z-index: 5;
+    // background-color: #333;
     .hide-desktop {
         max-width: 250px;
         min-height: 50px;
@@ -190,9 +191,12 @@ a {
     .hero-video {
         position: absolute;
         top: 0;
-        width: 100vw;
+        width: 1920px;
         height: 90vh;
-        @media (max-width: 1350px) {
+        video {
+          background-color: #333;
+        }
+        @media (max-width: 500px) {
             width: 1400px;
             right: 0;
         }
@@ -420,7 +424,7 @@ a {
             background-color: rgba(217, 220, 222, 0.4);
             @media (max-width: 500px) {
                 position: absolute;
-                width: calc(100vw - 30px);
+                width: calc(100vw - 40px);
                 bottom: -12px;
                 left: -20px;
             }
@@ -696,7 +700,7 @@ a {
                 background-color: rgba(217, 220, 222, 0.4);
                 @media (max-width: 500px) {
                     position: absolute;
-                    width: calc(100vw - 30px);
+                    width: calc(100vw - 40px);
                     bottom: -12px;
                     left: -20px;
                 }
